--- a/src/main/resources/templates/views/opn/srv/OPNSRV003M0.html
+++ b/src/main/resources/templates/views/opn/srv/OPNSRV003M0.html
@@ -1,124 +1,95 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  layout:decorate="~{layout/layout}">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <th:block layout:fragment="content">
-  <div class="page">
-    <script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
-    <div class="page-wrapper" id="page-wrapper">
-      <!-- Main Container -->
-      <div class="container" id="container">
-        <h2>[[${menuNm}]]</h2>
-        <div class="ptag-container">
-          <!-- <span><a href="#"> Home ></a></span> -->
-          <span>[[${navigator}]]</span>
-        </div>
-        <!-- Form Container -->
-        <div class="form-container">
-          <div class="form-box">
-            <form id="filter-form" name="form" method="post" action="/WRKFIL001M0SelectList" onsubmit="return false;">
-              <div class="row align-items-center">
-                <div class="col-auto">
-                  <label class="form-label">Month: </label>
-                  <select name="user[month]" class="form-select select-month-year p-1" id="inputMonth">
-                    <option value="">Month</option>
-                    <option value="1">January</option>
-                    <option value="2">February</option>
-                    <option value="3">March</option>
-                    <option value="4">April</option>
-                    <option value="5">May</option>
-                    <option value="6">June</option>
-                    <option value="7">July</option>
-                    <option value="8">August</option>
-                    <option selected="selected" value="9">September</option>
-                    <option value="10">October</option>
-                    <option value="11">November</option>
-                    <option value="12">December</option>
-                  </select>
-                </div>
-                <!-- <div class="col-3"></div> -->
-                <div class="col-auto">
-                  <label class="form-label">Year: </label>
-                  <select name="user[year]" class="form-select select-month-year p-1" id="inputYear">
-                    <option value="">Year</option>
-                    <option value="2020">2020</option>
-                    <option value="2021">2021</option>
-                    <option value="2022">2022</option>
-                    <option value="2023">2023</option>
-                    <option selected="selected" value="2024">2024</option>
-                    <option value="2025">2025</option>
-                    <option value="2026">2026</option>
-                  </select>
-                </div>
-                <div class="col-auto">
-                  <label class="form-label">Company Code / Name: </label>
-                  <!-- <div class="input-group"> -->
-                  <input id="companyCode" name="companyCode" type="text" class="form-control select-month-year p-1"
-                    placeholder="insert value" />
-                  <!-- </div> -->
-                </div>
-                <div class="col-auto">
-                  <button type="button" class="btn btn-primary search-button p-1" id="searchButton">
-                    Search
-                  </button>
-                </div>
-              </div>
-              <div class="col text-end align-items-center me-2">
-                <button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px"
-                  id="downloadExcel">
-                  Download
-                </button>
-                <!-- <button
-                    name="btnExcelDown"
-                    type="button"
-                    class="btn btn-lime"
-                    style="padding: 4px 10px; color: white; font-size: 13px"
-                    id="downloadExcel"
-                    onclick="getExcelList()"
-                    data-test="edit-button"
-                  >
-                    Download
-                  </button> -->
-                <!-- <button
-                    name="btnSave"
-                    type="button"
-                    class="btn btn-secondary"
-                    style="padding: 4px 10px; color: white; font-size: 13px"
-                    onclick="setSaveUploadFile()"
-                    data-test="edit-button"
-                  >
-                    Save
-                  </button> -->
-              </div>
-              <!-- Extra space for folowing the form box-->
-              <!-- <div style="padding-bottom: 1px"></div> -->
-            </form>
-          </div>
-        </div>
-      </div>
-      <!-- Page content -->
-      <div class="page-body">
-        <div class="container-xl">
-          <div class="row row-cards">
-            <div class="col-12 mb-3">
-              <div class="card card-md d-flex flex-column h-100">
-                <div id="divMyGridBackup">
-                  <table class="table" align="center"></table>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 mb-3">
-            <div class="card card-md">
-              <div class="container my-5">
-                <canvas id="mixedChart" width="300" height="150"></canvas>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="js/utils.js"></script>
-    <script>
+	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
+	<div class="page-wrapper" id="page-wrapper">
+		<!-- Main Container -->
+		<div class="container" id="container">
+			<h2>[[${menuNm}]]</h2>
+			<div class="ptag-container">
+				<!-- <span><a href="#"> Home ></a></span> -->
+				<span>[[${navigator}]]</span>
+				<!-- Form Container -->
+				<div class="form-container">
+					<div class="form-box">
+						<form id="filter-form" name="form" method="post" action="/WRKFIL001M0SelectList" onsubmit="return false;">
+							<div class="row">
+								<div class="col-auto">
+									<label class="form-label">Month: </label>
+									<select name="user[month]" class="form-select select-month-year p-1" id="inputMonth">
+										<option value="">Month</option>
+										<option value="1">January</option>
+										<option value="2">February</option>
+										<option value="3">March</option>
+										<option value="4">April</option>
+										<option value="5">May</option>
+										<option value="6">June</option>
+										<option value="7">July</option>
+										<option value="8">August</option>
+										<option selected="selected" value="9">September</option>
+										<option value="10">October</option>
+										<option value="11">November</option>
+										<option value="12">December</option>
+									</select>
+								</div>
+								<!-- <div class="col-3"></div> -->
+								<div class="col-auto">
+									<label class="form-label">Year: </label>
+									<select name="user[year]" class="form-select select-month-year p-1" id="inputYear">
+										<option value="">Year</option>
+										<option value="2020">2020</option>
+										<option value="2021">2021</option>
+										<option value="2022">2022</option>
+										<option value="2023">2023</option>
+										<option selected="selected" value="2024">2024</option>
+										<option value="2025">2025</option>
+										<option value="2026">2026</option>
+									</select>
+								</div>
+								<div class="col-auto">
+									<label class="form-label">Company Code / Name: </label>
+									<!-- <div class="input-group"> -->
+									<input id="companyCode" name="companyCode" type="text" class="form-control p-1" placeholder="insert value" />
+									<!-- </div> -->
+								</div>
+								<div class="col-auto">
+									<button type="button" class="btn btn-primary search-button p-1" id="searchButton">Search</button>
+								</div>
+								<div class="col text-end">
+									<p style="height:27px;">&nbsp;</p>
+									<button type="button" class="btn btn-lime" style="padding: 4px 10px; color: white; font-size: 13px" id="downloadExcel">Download</button>
+								</div>
+							</div>
+							<!-- Extra space for folowing the form box-->
+							<!-- <div style="padding-bottom: 1px"></div> -->
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Page content -->
+		<div class="page-body">
+			<div class="container-xl">
+				<div class="row row-cards">
+					<div class="col-12 mb-3">
+						<div class="card card-md d-flex flex-column h-100">
+							<div id="divMyGridBackup">
+								<table class="table" align="center"></table>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 mb-3">
+					<div class="card card-md">
+						<div class="container my-5">
+							<canvas id="mixedChart" width="300" height="150"></canvas>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script src="js/utils.js"></script>
+		<script>
       function getCsList(input) {
         console.log("getCsList input : " + input);
         var option = {
@@ -133,7 +104,7 @@
         gf_Transaction(option, fn_callback);
       }
     </script>
-    <script>
+		<script>
       $(document).ready(function () {
         console.log("Document is ready.");
         //화면 접속시 바로 조회
@@ -195,9 +166,9 @@
               createValidator,
               noWhitespaceValidator,
             ]),
-          width: 170,
+          width: 150,
           headerCssClass: "slick-header-columns",
-          cssClass: "slick-column-center",
+          cssClass: "slick-column-left",
           formatter: companyNameFormatter,
         },
         {
@@ -211,7 +182,7 @@
               createValidator,
               noWhitespaceValidator,
             ]),
-          width: 170,
+          width: 150,
           headerCssClass: "slick-header-columns",
           cssClass: "slick-column-center",
         }, 
@@ -226,7 +197,7 @@
               { key: "N", value: "N" },
             ]);
           },
-          width: 60,
+          width: 100,
           headerCssClass: "slick-header-columns",
           cssClass: "slick-column-center",
         }, 
@@ -239,7 +210,7 @@
           validator: createValidator,
           width: 120,
           headerCssClass: "slick-header-columns",
-          cssClass: "slick-column-center",
+          cssClass: "slick-column-right",
           formatter: numberFormatter,
         },
         {
@@ -251,7 +222,7 @@
           validator: createValidator,
           width: 120,
           headerCssClass: "slick-header-columns",
-          cssClass: "slick-column-center",
+          cssClass: "slick-column-right",
           formatter: numberFormatter,
 
         },
@@ -269,7 +240,7 @@
             ]),
           width: 120,
           headerCssClass: "slick-header-columns",
-          cssClass: "slick-column-center",
+          cssClass: "slick-column-right",
         },
       ];
 
@@ -338,6 +309,7 @@
         asyncEditorLoading: false,
         autoEdit: false,
         autoEditNewRow: false,
+        rowHeight: 35,
       };
 
       var newRowIds = 0;
@@ -781,7 +753,7 @@
           exportToExcel(fileName, sheetName, gridColumns, gridData);
         });
     </script>
-  </div>
-  <script src="js/utils.js"></script>
+	</div>
+	<script src="js/utils.js"></script>
 </th:block>
 </html>
