조회조건 당월 기본 셋팅 설정

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -166,10 +166,12 @@
 		</script>
 		<script>
 			var gv_today = "[[${today}]]";
+			var gv_todayDayOfWeek = "[[${todayDayOfWeek}]]";
 			var gv_todayArr = gv_today.split("-");
 			var gv_year = gv_todayArr[0];
 			var gv_month = gv_todayArr[1];
 			var gv_day = gv_todayArr[2];
+			console.log(gv_todayDayOfWeek);
 		</script>
 	</head>
 </th:block>
