--- a/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
@@ -155,6 +155,10 @@
           dropdown.append(option);
         });
       }
+
+      $("#inputYear").val(gv_year);
+      $("#inputMonth").val(gv_month);
+
     });
 
     function getExcelList() {
